'replace pre-a250 dockerfile, and fix homepage spacing'

--- a/app/assets/stylesheets/globals/homepage.css.scss
+++ b/app/assets/stylesheets/globals/homepage.css.scss
@@ -48,6 +48,10 @@
         }
     }
 
+    .intro-text.top-box {
+      margin-bottom: 4em;
+    }
+
     .intro-text h2 {
         color: #fff;
         font-weight: 300;
